--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
     <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'leandevelopment'; // required: replace example with your forum shortname
+        var disqus_shortname = '{{page.excerpt}}'; // required: replace example with your forum shortname
         var disqus_developer = 1;
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
